# Time

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  Time.cxx  Time.hpp
tests/: AdditionTest.cxx  AssignOperator.cxx  CMakeLists.txt  ConstructorTest.cxx  DifferenceTest.cxx  OutputOperator.cxx  SmallerThanOperator.cxx  SubtractionTest.cxx  main.cxx
